duplicate password fields on admin side

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -551,7 +551,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
     }
 
 .ui-page-theme-a .detailSectionHeader {
-    background-color: #fff;
+    background-color: #ddd;
     border: 1px solid #ddd;
     border-radius: 2px;
 }
