fixes #1001 - Support downloading

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/site.css
@@ -66,6 +66,12 @@ body {
     overflow-y: hidden !important;
 }
 
+.jqmButtonNoText {
+    padding: 3px 4px!important;
+    border-radius: 4px!important;
+    vertical-align: top;
+}
+
 .textlink {
     text-decoration: none;
 }
