Add playlist forward and back controls to video player

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer-video.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/mediaplayer-video.css
@@ -61,6 +61,12 @@
     vertical-align: top;
 }
 
+.videoAdvancedControls .currentPlaylistState {
+    display: inline-block;
+    line-height: 44px;
+    margin-right: 10px;
+}
+
 .videoControls .currentTime {
     margin-top: 25px;
 }
