--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -100,8 +100,7 @@
 }
 
 .logoLibraryMenuButtonText {
-    font-family: MBLogo;
-    font-weight: 200;
+    font-family: Montserrat;
     color: #000;
 }
 
