--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -1446,3 +1446,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
         padding-left: 1em;
     }
 }
+
+.homeTopViews .cardText{
+    font-size: 14px;
+}
