update live tv grid style

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
@@ -149,11 +149,11 @@
     white-space: nowrap;
     position: relative;
     margin: 0 auto;
-    margin-top: 44px;
+    margin-top: 50px;
 }
 
 .mobileGuide .programContainer {
-    margin-top: 30px;
+    margin-top: 38px;
 }
 
 .channelPrograms {
@@ -173,7 +173,16 @@
 
 .timeslotHeaderInner {
     padding: .6em .35em .5em;
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.channelTimeslotHeader .accentButton {
+    font-size: 15px;
+}
+
+.channelTimeslotHeader .timeslotHeaderInner {
+    padding-top: .4em;
 }
 
 .channelHeaderCell, .channelTimeslotHeader {
@@ -193,11 +202,11 @@
 }
 
 .timeslotHeader, .channelTimeslotHeader {
-    height: 34px;
+    height: 42px;
 }
 
 .channelHeaderCellInner {
-    padding: .2em .5em .5em;
+    padding: .35em .5em .5em;
     display: block;
     text-decoration: none;
     font-weight: 300 !important;
@@ -211,7 +220,7 @@
 
 .channelList {
     float: left;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 300;
 }
 
@@ -272,10 +281,6 @@
     padding: 0 .5em .35em;
 }
 
-.plainProgramInfo {
-    background-color: #252525;
-}
-
 .guideChannelInfo {
     display: inline-block;
     max-width: 110px;
@@ -302,15 +307,11 @@
     }
 
     .channelHeaderCell, .channelTimeslotHeader {
-        width: 89px;
+        width: 94px;
     }
 
     .programGrid, .timeslotHeaders {
-        margin-left: 90px;
-    }
-
-    .currentDate {
-        font-size: 11px;
+        margin-left: 95px;
     }
 
     .currentDay {
@@ -321,12 +322,29 @@
         width: 6500px;
     }
 
-    .channelList {
+    .channelList, .channelTimeslotHeader .accentButton  {
         font-size: 14px;
+    }
+
+    .timeslotHeaderInner {
+        font-size: 14px;
+        padding-top: .8em;
     }
 
     .channelHeaderCellInner {
         padding-top: .6em;
+    }
+
+    .channelTimeslotHeader a {
+        padding-left: 0 !important;
+    }
+
+    .channelTimeslotHeader i {
+        margin-right: 2px !important;
+    }
+
+    .channelTimeslotHeader .timeslotHeaderInner {
+        padding-top: .5em;
     }
 }
 
