added a photo view

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -22,6 +22,7 @@
     background-color: rgba(0, 0, 0, .85);
     z-index: 998;
     display: none;
+    line-height: initial;
 }
 
 .cardOverlayInner {
