--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -176,7 +176,7 @@
     padding: 5px 4px 2px;
     text-shadow: none;
     font-weight: 400;
-    line-height: initial;
+    line-height: 1.4;
 }
 
 .cardOverlayInner {
